# cuda_cs344

./: .gitignore  CMakeLists.txt  README.md
lesson1/: CMakeLists.txt  main.cpp  square.cu  square.cuh
lesson4_reduce/: CMakeLists.txt  main.cpp  reduce.cuh
problem_set1/: CMakeLists.txt  HW1.cpp  HW1.hpp  compare.cpp  compare.hpp  main.cpp  reference_calc.cpp  reference_calc.hpp  student_func.cu  utils.hpp
problem_set2/: CMakeLists.txt  HW2.cpp  HW2.hpp  main.cpp  reference_calc.cpp  reference_calc.hpp  student_func.cu  utils.hpp
